// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-u16ygp"
  >
     
    <span>
      Default
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-u16ygp iconOnly large"
  >
    <i
      class="material-icons svelte-u16ygp"
    >
      play_arrow
    </i>
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-u16ygp large"
  >
    <i
      class="material-icons svelte-u16ygp"
    >
      person
    </i>
     
    <span>
      Hey!
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-u16ygp primary"
  >
     
    <span>
      Primary
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-u16ygp primary iconOnly"
  >
    <i
      class="material-icons svelte-u16ygp"
    >
      volume_up
    </i>
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-u16ygp"
  >
    <i
      class="material-icons svelte-u16ygp"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
  </button>
</section>
`;
